@@ -32,6 +32,7 @@ extern __typeof (__redirect_memset) __memset_falkor attribute_hidden;
 # if HAVE_AARCH64_SVE_ASM
 extern __typeof (__redirect_memset) __memset_a64fx attribute_hidden;
 # endif
+extern __typeof (__redirect_memset) __memset_emag attribute_hidden;
 extern __typeof (__redirect_memset) __memset_generic attribute_hidden;
 
 libc_ifunc (__libc_memset,
@@ -42,7 +43,9 @@ libc_ifunc (__libc_memset,
 		? __memset_a64fx
 		: __memset_generic)));
 # else
-	     : __memset_generic));
+	     : (IS_EMAG (midr) && zva_size == 64
+		? __memset_emag
+		: __memset_generic)));
 # endif
 
 # undef memset
